# hse_deep_cpp_autumn_2025

lesson-02/src/homework/: allocator.cpp  allocator.hpp  main.cpp  test.cpp
lesson-03/src/homework/: CMakeLists.txt  TokenParser.cpp  TokenParser.hpp  main.cpp
lesson-05/src/homework/: CMakeLists.txt  Matrix.cpp  main  main.cpp
lesson-05/src/homework/include/: Matrix.hpp
lesson-05/src/homework/src/: Matrix.cpp
lesson-05/src/homework/tests/: test_matrix.cpp  test_matrix_extra.cpp
lesson-06/src/homework/: CMakeLists.txt
lesson-06/src/homework/include/: BigInt.hpp
lesson-06/src/homework/src/: BigInt.cpp
lesson-06/src/homework/tests/: test_bigint.cpp  test_bigint_extra.cpp
lesson-07/src/homework/: CMakeLists.txt
lesson-07/src/homework/include/: Deserializer.hpp  Serializer.hpp
lesson-07/src/homework/src/: Deserializer.cpp  Serializer.cpp
lesson-07/src/homework/tests/: main_test.cpp
lesson-08/homework/: CMakeLists.txt
lesson-08/homework/include/: Format.hpp
lesson-08/homework/src/: Format.cpp
lesson-08/homework/tests/: format_test.cpp
lesson-10/homework/: CMakeLists.txt
lesson-10/homework/class/: avl_tree.cpp  main.cpp
lesson-10/homework/include/: avl_allocator.hpp  avl_common.hpp  avl_iterator.hpp  avl_node.hpp  avl_tree.hpp
lesson-10/homework/tests/: tests.cpp
lesson-11/src/homework/: Makefile  Readme.md  check_deps.py  cjson.c  setup.py  test_cjson.py  test_performance.py
